...
import java.time.format.DateTimeParseException
import java.util.Locale

/** Test tags for UI tests to identify components. */
object TripSummaryTestTags {
  const val TRIP_SUMMARY_TITLE = "tripSummary"
  const val TRIP_NAME_FIELD = "tripName"
  const val FROM_DATE = "fromDate"
  const val TO_DATE = "toDate"
  const val NUMBER_OF_TRAVELERS = "numberOfTravelers"
  const val ADULTS_COUNT = "adultCount"
  const val CHILDREN_COUNT = "childCount"
  const val TRAVELLING_PREFERENCES_LABEL = "travellingPreferences"
  const val PREFERENCE_ICON = "preferenceIcon"
  const val ARRIVAL_LABEL = "arrivalLabel"
  const val DEPARTURE_LABEL = "departureLabel"
  const val PLACES_LABEL = "placesLabel"
  const val DESTINATIONS_EMPTY_LIST = "destinationsList"
  const val DESTINATION_ITEM = "destinationItem"
  const val CREATE_TRIP_BUTTON = "createTripButton"
  const val TRIP_SUMMARY_SCREEN = "tripSummaryScreen"
}

/**
 * Composable to display the trip summary screen.
 *
 * @param viewModel The view model to use.
...
