...
/** Test tags for integration and UI tests */
object SignInScreenTestTags {
  const val APP_LOGO = "appLogo"
  const val EMAIL_FIELD = "emailField"
  const val PASSWORD_FIELD = "passwordField"
  const val LOGIN_BUTTON = "loginButton"
  const val GOOGLE_LOGIN_BUTTON = "googleLoginButton"
  const val LOADING_INDICATOR = "loadingIndicator"
  const val NAME = "name"
}

enum class GoogleButtonType {
  SIGN_UP,
...
