...
import com.github.swent.swisstravel.utils.NetworkUtils

/** Test tags for the profile settings screen. */
object ProfileSettingsScreenTestTags {
  const val CONTENT = "content"
  const val EDIT_PROFILE_PIC = "editProfilePic"
  const val PROFILE_INFO = "profileInfo"
  const val PERSONAL_INFO = "personalInfo"
  const val EMAIL = "email"
  const val PREFERENCES_LIST = "preferencesList"
  const val PREFERENCES = "preferences"
  const val PREFERENCES_TOGGLE = "preferencesToggle"
  const val LOGOUT_BUTTON = "logoutButton"
  const val PREVIEW_PFP_TEXT = "previewPfpText"
  const val PREVIEW_PFP_CONFIRM = "previewPfpConfirm"
  const val PREVIEW_PFP_CANCEL = "previewPfpCancel"
  const val PREVIEW_PFP_IMAGE = "previewPfpImage"

  /**
...
