...
import com.github.swent.swisstravel.ui.friends.FriendsViewModel
import com.github.swent.swisstravel.ui.navigation.NavigationTestTags
import com.github.swent.swisstravel.utils.NetworkUtils

/** Test tags for the profile screen. */
object ProfileScreenTestTags {
  const val SETTINGS_BUTTON = "settingsButton"
  const val UNFRIEND_BUTTON = "unfriendButton"
  const val DISPLAY_NAME = "displayName"
  const val PROFILE_PIC = "profilePic"
  const val BIOGRAPHY = "biography"
  const val ACHIEVEMENTS = "achievements"
  const val PINNED_TRIPS_TITLE = "pinnedTripsTitle"
...
